# docker

./: README.md
tdlib/: 32bit.wbuild.sh  64bit.wbuild.sh  Dockerfile.alpine  Dockerfile.debian  Dockerfile.ubuntu  Dockerfile.wasm  Windows10.crab.md  Windows10.noob.md
tdlib/jni_on/: Dockerfile.debian
tdlib/jni_on/android_achiev/: Android.mk  Application.mk  README.md  android.cmake.md
tgvoip/tgvoipcall/: CMakeLists.txt  MockReflector.cpp  MockReflector.h  main.cpp
tgvoip/tgvoipcall/libs/: libtgvoip.la  libtgvoip.so.0
